examples/errors/val_reassign.adder
## Reassigning a `val` binding — must be rejected.

fn main():
    val x = 1
    x = 2
    print(x)
